--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,15 @@
             android:queryHint="Search"/>
 
         <ImageView
-            android:src="@drawable/chatfill"
+            android:id="@+id/chat"
+            android:src="@drawable/chat"
             android:layout_marginEnd="16sp"
             android:layout_width="35sp"
             android:layout_height="35sp"/>
 
         <ImageView
-            android:src="@drawable/notificationfill"
+            android:id="@+id/notification"
+            android:src="@drawable/notification"
             android:layout_marginEnd="16sp"
             android:layout_width="35sp"
             android:layout_height="35sp"/>
