--- a/app/src/main/res/layout/activity_detail_barang_user.xml
+++ b/app/src/main/res/layout/activity_detail_barang_user.xml
@@ -76,6 +76,7 @@
                     android:src="@drawable/like"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/harga_kendaraan" />
+
             </LinearLayout>
 
             <TextView
@@ -100,6 +101,7 @@
                 android:textSize="14sp" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -138,7 +140,9 @@
                 android:justificationMode="inter_word"
                 android:text="@string/desc_barang"
                 android:textSize="12sp" />
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -213,24 +217,35 @@
                     tools:text="nama kota" />
 
             </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/btn_R"
-        android:layout_width="181sp"
-        android:layout_height="48sp"
-        android:layout_gravity="end"
-        android:layout_marginTop="20sp"
-        android:layout_marginEnd="16sp"
-        android:background="@drawable/border"
-        android:fontFamily="@font/manropebold"
-        android:paddingVertical="0sp"
-        android:text="Checkout"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView3" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardView3"
+        app:layout_constraintVertical_bias="1.0">
+
+        <Button
+            android:id="@+id/btn_R"
+            android:layout_width="181sp"
+            android:layout_height="48sp"
+            android:layout_gravity="end"
+           android:layout_margin="16sp"
+            android:background="@drawable/border"
+            android:fontFamily="@font/manropebold"
+            android:paddingVertical="0sp"
+            android:text="Checkout"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/cardView3" />
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
