--- a/app/src/main/res/layout/activity_detail_barang_user.xml
+++ b/app/src/main/res/layout/activity_detail_barang_user.xml
@@ -229,6 +229,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="horizontal"
             android:layout_height="wrap_content">
 
             
