--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,45 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background"
-    android:layout_gravity="center"
     tools:context=".MainActivity">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        app:cardBackgroundColor="@color/blue"
+        app:cardElevation="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.denzcoskun.imageslider.ImageSlider
+            android:id="@+id/imageSlider"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:iss_period="1000"
+            app:iss_auto_cycle="true"
+            app:iss_delay="1000"
+            app:iss_title_background="@drawable/gradient">
+        </com.denzcoskun.imageslider.ImageSlider>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/ly2"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <SearchView
             android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16sp"
+            android:layout_margin="16dp"
             android:layout_weight="1"
             android:background="@drawable/border"
             android:queryHint="Search"/>
@@ -29,26 +53,26 @@
         <ImageView
             android:id="@+id/chat"
             android:src="@drawable/chat"
-            android:layout_marginEnd="16sp"
-            android:layout_width="35sp"
-            android:layout_height="35sp"/>
+            android:layout_marginEnd="16dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"/>
 
         <ImageView
             android:id="@+id/notification"
             android:src="@drawable/notification"
-            android:layout_marginEnd="16sp"
-            android:layout_width="35sp"
-            android:layout_height="35sp"/>
-
+            android:layout_marginEnd="16dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"/>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        app:layout_constraintTop_toBottomOf="@+id/ly2"
-        android:layout_margin="16sp"
-        android:layout_width="match_parent"
+        android:layout_margin="16dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@+id/ly2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:id="@+id/ly1"
@@ -60,7 +84,7 @@
                 android:id="@+id/txt_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8sp"
+                android:layout_margin="8dp"
                 android:fontFamily="@font/manropebold"
                 android:text="Welcome!!"
                 android:textColor="@color/blue"
@@ -69,37 +93,35 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8sp"
-                android:layout_marginStart="8sp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="Hifric Aldar"
                 android:textSize="16sp" />
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16sp"
+            android:layout_marginEnd="16dp"
             android:layout_gravity="end|center_vertical">
 
             <ImageView
                 android:id="@+id/bottom_me"
-                android:layout_width="55sp"
-                android:layout_height="55sp"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
                 android:src="@drawable/user" />
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@id/cardView3"
-        app:layout_constraintTop_toBottomOf="@id/cardView2"
-        android:layout_marginTop="8sp"
-        android:layout_width="match_parent"
+        android:id="@+id/cardView3"
+        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,9 +130,6 @@
 
             <TextView
                 android:id="@+id/pesanan_saya"
-                app:layout_constraintTop_toBottomOf="@id/ly3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -122,28 +141,18 @@
             <View
                 android:id="@+id/line1"
                 android:layout_width="match_parent"
-                android:layout_height="5sp"
-                android:background="@drawable/straightline"
-                app:layout_constraintTop_toBottomOf="@id/pesanan_saya"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteX="1sp" />
-
+                android:layout_height="5dp"
+                android:background="@drawable/straightline" />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/cardView3"
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
