--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_width="0sp"
+        android:layout_height="200sp"
         app:cardBackgroundColor="@color/blue"
-        app:cardElevation="20dp"
+        app:cardElevation="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -22,7 +22,7 @@
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/imageSlider"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="200sp"
             app:iss_period="1000"
             app:iss_auto_cycle="true"
             app:iss_delay="1000"
@@ -35,7 +35,7 @@
         android:id="@+id/ly2"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +43,9 @@
 
         <SearchView
             android:id="@+id/searchView"
-            android:layout_width="0dp"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="16sp"
             android:layout_weight="1"
             android:background="@drawable/border"
             android:queryHint="Search"/>
@@ -53,22 +53,22 @@
         <ImageView
             android:id="@+id/chat"
             android:src="@drawable/chat"
-            android:layout_marginEnd="16dp"
-            android:layout_width="35dp"
-            android:layout_height="35dp"/>
+            android:layout_marginEnd="16sp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"/>
 
         <ImageView
             android:id="@+id/notification"
             android:src="@drawable/notification"
-            android:layout_marginEnd="16dp"
-            android:layout_width="35dp"
-            android:layout_height="35dp"/>
+            android:layout_marginEnd="16sp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"/>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_margin="16dp"
-        android:layout_width="0dp"
+        android:layout_margin="16sp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/ly2"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
                 android:id="@+id/txt_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="8sp"
                 android:fontFamily="@font/manropebold"
                 android:text="Welcome!!"
                 android:textColor="@color/blue"
@@ -93,8 +93,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8sp"
+                android:layout_marginStart="8sp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="Hifric Aldar"
                 android:textSize="16sp" />
@@ -103,21 +103,21 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="16sp"
             android:layout_gravity="end|center_vertical">
 
             <ImageView
                 android:id="@+id/bottom_me"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="55sp"
+                android:layout_height="55sp"
                 android:src="@drawable/user" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
-        android:layout_marginTop="8dp"
-        android:layout_width="0dp"
+        android:layout_marginTop="8sp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/cardView2"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,16 +141,16 @@
             <View
                 android:id="@+id/line1"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="5sp"
                 android:background="@drawable/straightline" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="8dp"
+        android:layout_width="0sp"
+        android:layout_height="0sp"
+        android:padding="8sp"
         app:layout_constraintTop_toBottomOf="@+id/cardView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
