--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="black">#FF000000</color>
     <color name="blue">#3185FC</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="trasparent">#00FFFFFF</color>
 </resources>
