--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/white"
     tools:context=".SearchActivity">
 
     <LinearLayout
+        android:background="@color/white"
         android:id="@+id/ly"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
@@ -43,6 +44,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
         android:id="@+id/recycler_view"
         android:layout_width="0sp"
         android:layout_height="0sp"
@@ -51,6 +53,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="8sp" />
+        android:paddingStart="8sp"
+        android:paddingEnd="8sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
