--- a/app/src/main/res/layout/activity_verfiy_toko.xml
+++ b/app/src/main/res/layout/activity_verfiy_toko.xml
@@ -12,7 +12,10 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="35sp"
