--- a/app/src/main/res/layout/activity_detail_barang_user.xml
+++ b/app/src/main/res/layout/activity_detail_barang_user.xml
@@ -6,24 +6,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     tools:context=".DetailBarangUser">
 
     <ImageView
         android:id="@+id/foto_barang"
         android:layout_width="match_parent"
-        android:layout_height="270sp"
+        android:layout_height="270dp"
         android:src="@drawable/motor1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/back_button"
-        android:layout_width="35sp"
-        android:layout_height="35sp"
-        android:layout_marginStart="16sp"
-        android:layout_marginTop="16sp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -36,19 +37,20 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8sp"
-        app:cardElevation="4sp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foto_barang">
+        app:layout_constraintTop_toBottomOf="@+id/foto_barang"
+        android:layout_marginBottom="8dp">
 
         <LinearLayout
             android:id="@+id/detail_barang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="8sp"
-            android:paddingVertical="16sp">
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="16dp"
+            android:layout_marginBottom="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,29 +58,31 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/harga_kendaraan"
-                    android:layout_width="0sp"
+                    android:id="@+id/deskripsi_kendaraan"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginBottom="4sp"
+                    android:layout_marginBottom="4dp"
                     android:fontFamily="@font/manropebold"
                     android:text="Rp 95.000/hari"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toStartOf="@id/like_icon" />
 
                 <ImageView
                     android:id="@+id/like_icon"
-                    android:layout_width="42sp"
-                    android:layout_height="43sp"
+                    android:layout_width="42dp"
+                    android:layout_height="43dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/like" />
-
+                    android:src="@drawable/like"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/harga_kendaraan" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/nama_kendaraan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16sp"
+                android:layout_marginBottom="16dp"
                 android:fontFamily="@font/manropesemibold"
                 android:text="Yamaha NMAX"
                 android:textSize="16sp" />
@@ -89,42 +93,42 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_ada"
                 android:fontFamily="@font/manroperegular"
-                android:paddingHorizontal="12sp"
-                android:paddingVertical="4sp"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="4dp"
                 android:text="Tersisa 3"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8sp"
-        app:cardElevation="4sp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8sp"
+            android:layout_marginBottom="8dp"
             android:orientation="vertical"
-            android:paddingHorizontal="8sp"
-            android:paddingVertical="16sp">
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8sp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/manropebold"
                 android:text="Deskripsi Barang"
                 android:textColor="@color/blue"
-                android:textSize="16sp" />
+                android:textSize="16dp" />
 
             <TextView
                 android:id="@+id/deskripsi_kendaraan1"
@@ -133,126 +137,102 @@
                 android:fontFamily="@font/manroperegular"
                 android:justificationMode="inter_word"
                 android:text="@string/desc_barang"
-                android:textSize="12sp" />
-
+                android:textSize="12dp" />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8sp"
-        app:cardElevation="4sp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8sp"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal"
-            android:paddingHorizontal="8sp"
-            android:paddingVertical="16sp">
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="16dp">
 
             <ImageView
-                android:layout_width="80sp"
-                android:layout_height="80sp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:src="@drawable/pf" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8sp"
+                android:layout_marginStart="8dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="4sp"
-                    android:paddingVertical="8sp"
+                    android:paddingHorizontal="4dp"
+                    android:paddingVertical="8dp"
                     android:weightSum="2">
 
                     <TextView
                         android:id="@+id/nama_toko"
-                        android:layout_width="0sp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/manropebold"
                         android:gravity="start|center_vertical"
-                        android:text="Holiyay Rent"
+                        tools:text="Holiyay Rent"
                         android:textColor="@color/blue"
                         android:textSize="18sp" />
 
                     <TextView
-                        android:layout_width="0sp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16sp"
+                        android:layout_marginHorizontal="16dp"
                         android:layout_weight="1"
                         android:layout_gravity="center"
                         android:background="@drawable/border_follow"
                         android:fontFamily="@font/manropebold"
-                        android:paddingVertical="4sp"
+                        android:paddingVertical="4dp"
                         android:text="Follow"
                         android:textAlignment="center"
                         android:textColor="@color/blue" />
                 </LinearLayout>
 
+
                 <TextView
-                    android:layout_marginStart="4sp"
+                    android:layout_marginStart="4dp"
                     android:id="@+id/lokasi_vendor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/manroperegular"
-                    android:text="nama kota" />
+                    tools:text="nama kota" />
 
             </LinearLayout>
-
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/btn_R"
+        android:layout_width="181dp"
+        android:layout_height="48dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/border"
+        android:fontFamily="@font/manropebold"
+        android:paddingVertical="0dp"
+        android:text="Checkout"
+        android:textColor="@color/white"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView4"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@id/cardView3" />
 
-        <Button
-            android:id="@+id/btn_R"
-            android:layout_width="181sp"
-            android:layout_height="48sp"
-            android:layout_gravity="end"
-            android:layout_margin="16sp"
-            android:background="@drawable/border"
-            android:fontFamily="@font/manropebold"
-            android:paddingVertical="0sp"
-            android:text="Checkout"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
